engr441/while-infer/tests/valid/Inferred_Valid_1.while
void main() {
    var x = 1;
    assert (x == 1);
}