engr441/while-infer/tests/invalid-typing/Inferred_Valid_6.while
void main() {
    var x;
    if (false) {
        x = 1;
    }

    assert (x);
}
